# able-workflow-copier

./: .ansible-lint.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS-setup.sh  AGENTS.md  CHANGELOG.md  README.md  SPECS.md  copier.yml  environment-py312-dev.yaml  example-answers-able.yml  example-answers-weh_interviews.yml  example-answers.yml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  multi-level-copier-template-issue.md
.github/workflows/: ci.yml  docs-pages.yml  main.yml  pr.yml
dev/: 404.html  index.html
dev/SUMMARY/: index.html
dev/contributing/: index.html
dev/contributing/SUMMARY/: index.html
dev/contributing/ci/: index.html
dev/contributing/docs/: index.html
dev/contributing/sandbox/: index.html
dev/contributing/setup/: index.html
dev/contributing/testing/: index.html
dev/contributing/updates/: index.html
dev/overview/: index.html
dev/overview/SUMMARY/: index.html
dev/overview/best-practices/: index.html
dev/overview/motivation/: index.html
dev/overview/tree/: index.html
dev/overview/whitespace/: index.html
dev/quick-reference/: index.html
dev/quick-reference/SUMMARY/: index.html
dev/quick-reference/post-copy/: index.html
dev/quick-reference/setup/: index.html
dev/search/: search_index.json
docs/: README.md  mkdocs.yml
docs/_gen-files-scripts/: render_summaries.py
docs/docs/: SUMMARY.md  index.md
docs/docs/_submodules/: etl-copier  module-copier  rule-copier
docs/docs/contributing/: SUMMARY.md  ci.md  docs.md  index.md  sandbox.md  setup.md  testing.md  updates.md
docs/docs/overview/: SUMMARY.md  best-practices.md  index.md  motivation.md  tree.md  whitespace.md
docs/docs/quick-reference/: SUMMARY.md  index.md  post-copy.md  setup.md
example-answers/: example-answers-weh_interviews.yml
extensions/: authors_filter.py
main/: index.html
main/contributing/: index.html
main/contributing/docs/: index.html
main/overview/: index.html
main/overview/SUMMARY/: index.html
main/search/: search_index.json
schemas/: project-authors.schema.json
scripts/: conda_update.sh  mkdocs_serve_all.py  sandbox_examples_generate.py
template/: .gitignore.jinja  .pre-commit-config.yaml  AGENTS-setup.md.jinja  AGENTS.md.jinja  CHANGELOG.md  README.md.jinja  pyproject.toml  pyproject.toml.jinja  snakefmt.toml  tox.ini.jinja
template/.copier-answers/: project.yml  rule-dag_svg.yaml  rule-dag_svg.yml
template/.copier-answers/post-copier-todos/: README.md  package.md.jinja  rule-dag_svg.md
template/.github/: labels.yml
template/.github/ISSUE_TEMPLATE/: post-copier-package.md.jinja
template/.github/workflows/: build.yml  ci.yml.jinja  github-labeler.yml  main.yml.jinja  pr.yml  pr.yml.jinja  release.yml
template/config/: README.md.jinja  config.yaml.jinja
template/data/: README.md
template/data/tests/: README.md
template/docs/: README.md.jinja  gen_ref_pages.py.jinja  mkdocs.yml.jinja  mkdocs.yml.jinja.bak
template/docs/_gen-files-scripts/: render_summaries.py
template/docs/docs/: SUMMARY.md  getting-started.md  index.md.jinja  rule-dag_svg.md  weh.md
template/hooks/: README.md  snakemake_pyproject2conda.py.jinja
template/logs/post-copier-todos/: package.md.jinja  rule-dag_svg.md
template/scripts/: copier-check-update.sh
template/tests/: conftest.py
template/tests/{{ package_name }}/: README.md.jinja
template/workflow/: Snakefile.jinja
template/workflow/envs/: py312-tox.yaml  py312-workflow.yaml  {{ package_name }}-py312-tox.yaml  {{ package_name }}-py312-workflow.yaml
template/workflow/rules/: build.smk.jinja  dev.smk  docs.smk  docs.smk.jinja  docs_dag_svg.smk  includes.smk  reports.smk  utils.smk  utils.smk.jinja
template/workflow/schemas/: config.schema.yaml.jinja
template/{{ package_name }}/: __init__.py.jinja  config.py  config.py.jinja
template/{{ package_name }}/datasets/: __init__.py
template/{{ package_name }}/features/: __init__.py
template/{{ package_name }}/models/: __init__.py
template/{{ package_name }}/utils/: logging.py
tests/: conftest.py  test_generate_example.py
tests/extensions/: test_authors_filter.py
tests/scripts/: test_sandbox_examples_generate.py
tests/template/: conftest.py  test_generate_example.py  test_template.py  test_tox_envs.py
tests/template/tox/: conftest.py  test_tox_envs.py
v0.1.0/SUMMARY/: index.html
v0.1.0/contributing/SUMMARY/: index.html
v0.1.0/overview/motivation/: index.html
v0.1.0/overview/whitespace/: index.html
v0.1.1/: 404.html  objects.inv
v0.1.3/: index.html
v0.1.3/quick-reference/: index.html
v0.1.3/search/: search_index.json
v0.1.4/: 404.html  index.html
v0.1.4/search/: search_index.json
(+99 files in other folders)
